mysql-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: mariadb-deploy
  labels:
    app: thcp
spec:
  selector:
    matchLabels:
      app: thcp
      tier: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: thcp
        tier: db
    spec:
      containers:
      - image: mariadb:10.0.22
        name: thcp-mdb
        ports:
        - containerPort: 3306
          name: mariadb
        volumeMounts:
        - name: mariadb-ephemeral-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mariadb-ephemeral-storage
        emptyDir: {}
