phpipam-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: phpipam-deploy
spec:
  selector:
    matchLabels:
      app: phpipam     
  template:
    metadata:
      labels:
        app: phpipam
    spec:
      containers:
      - name: phpipam-web
        image: phpipam/phpipam-www:latest
        ports:
        - containerPort: 80
          name: phpipam-web
        volumeMounts:
        - name: phpipam-logo
          mountPath: /var/www/html
      # -- PHPIPAM CRON container
      - name: phpipam-cron
        image: phpipam/phpipam-cron:latest
      volumes:
      - name: phpipam-logo
        emptyDir: {}
